--- a/conf/loader.conf
+++ b/conf/loader.conf
@@ -43,6 +43,8 @@ mfsbsd.hostname="joyent-fbsd"
 #mfsbsd.route_r1="-net 192.168.2 192.168.1.1"
 #mfsbsd.route_r2="-net 192.168.3 192.168.1.1"
 
+# Joyent
+
 #
 # Do not change anything here until you know what you are doing
 #
