--- a/conf/rc.conf
+++ b/conf/rc.conf
@@ -16,6 +16,12 @@ hostname="joyent-bsd"
 #ifconfig_em0="inet 192.168.0.1 netmask 255.255.255.0"
 #ifconfig_rl0="DHCP"
 #
+# Joyent
+zfs_enable="YES"
+zfs_pool="zroot"
+dumpdev="AUTO"
+#
+#
 # Change the values below only if you know what you are doing!
 #
 sshd_enable="YES"
