load Chelsio, Mellanox and Intel drivers

--- a/conf/loader.conf
+++ b/conf/loader.conf
@@ -43,7 +43,17 @@ mfsbsd.hostname="joyent-fbsd"
 #mfsbsd.route_r1="-net 192.168.2 192.168.1.1"
 #mfsbsd.route_r2="-net 192.168.3 192.168.1.1"
 
+#
 # Joyent
+#
+if_ixgbe_load="YES"
+## Chelsio
+#t4fw_cfg_load="YES"
+#t5fw_cfg_load="YES"
+t6fw_cfg_load="YES"
+if_cxgbe_load="YES"
+## Mellanox
+mlx4en_load="YES"
 
 #
 # Do not change anything here until you know what you are doing
