fix serial on lan

--- a/conf/loader.conf
+++ b/conf/loader.conf
@@ -2,6 +2,12 @@
 #
 # This is the /boot/loader.conf of your image
 #
+boot_multicons="YES"
+boot_serial="YES"
+comconsole_speed="115200"
+comconsole_port="0x2F8"
+console="comconsole vidconsole"
+ipmi_load="YES"
 # Custom mfsbsd variables
 #
 # Set all auto-detected interfaces to DHCP
