load drivers in rc.conf instead of loader.conf

--- a/conf/rc.conf
+++ b/conf/rc.conf
@@ -15,11 +15,24 @@ hostname="joyent-bsd"
 # You may configure a network interface here, you may use "DHCP" as well
 #ifconfig_em0="inet 192.168.0.1 netmask 255.255.255.0"
 #ifconfig_rl0="DHCP"
+
 #
 # Joyent
+#
 zfs_enable="YES"
 zfs_pool="zroot"
 dumpdev="AUTO"
+### Drivers
+## Intel
+if_ixl=load="YES"
+if_ixgbe_load="YES"
+## Chelsio
+#t4fw_cfg_load="YES"
+#t5fw_cfg_load="YES"
+t6fw_cfg_load="YES"
+if_cxgbe_load="YES"
+## Mellanox
+mlx4en_load="YES"
 #
 #
 # Change the values below only if you know what you are doing!
