fix dumpdev,set localstartup and add if_lagg module

--- a/conf/rc.conf
+++ b/conf/rc.conf
@@ -28,10 +28,11 @@ hostname=""
 #
 zfs_enable="YES"
 zfs_pool="zones"
-dumpdev="/dev/ada0p1"
+dumpdev="/dev/da1p1"
+local_startup="/opt"
 
 ### Drivers
-kld_list="if_ixl if_ixgbe t6fw_cfg if_cxgbe mlx5en vmm nmdm if_bridge if_tap vmmnet ipmi cpuctl pcm"
+kld_list="if_ixl if_ixgbe if_cxgbe mlx5en vmm nmdm if_bridge if_tap vmmnet ipmi cpuctl pcm if_lagg"
 
 ### Bhyve
 #cloned_interfaces="bridge0 tap0"
