--- a/conf/rc.conf
+++ b/conf/rc.conf
@@ -7,7 +7,7 @@
 # see the interfaces.conf file in this directory.
 #
 # Set this to any desired hostname
-hostname=""
+hostname="fbsd-gpgpu"
 #
 # You need a gateway defined for a working network setup
 #defaultrouter="192.168.0.254"
@@ -29,7 +29,6 @@ hostname=""
 zfs_enable="YES"
 zfs_pool="zones"
 dumpdev="/dev/da1p1"
-local_startup="/opt"
 
 ### Drivers
 kld_list="if_ixl if_ixgbe if_cxgbe mlx5en vmm nmdm if_bridge if_tap vmmnet ipmi cpuctl pcm if_lagg"
