--- a/conf/loader.conf
+++ b/conf/loader.conf
@@ -13,7 +13,7 @@ comconsole_port="0x2F8"
 console="comconsole vidconsole"
 hw.mfi.mrsas_enable="1"
 # cxgbe configuration
-hw.cxgbe.num_vis="2"
+#hw.cxgbe.num_vis="2"
 hw.cxgbe.lro_mbufs="32"
 
 # Custom mfsbsd variables
